RESOLVED FIXED53204
[Chromium] WebFrame::forms() should not return empty WebFormElements
https://bugs.webkit.org/show_bug.cgi?id=53204
Summary [Chromium] WebFrame::forms() should not return empty WebFormElements
Kent Tamura
Reported 2011-01-26 17:02:18 PST
We assume that the resultant Vector of WebFrame::forms() contains non-empty WebFromElements. However it contains empty WebFormElements if document()->forms() contains non HTMLElements.
Attachments
Patch (1.73 KB, patch)
2011-01-26 17:11 PST, Kent Tamura
no flags
Kent Tamura
Comment 1 2011-01-26 17:11:07 PST
Dimitri Glazkov (Google)
Comment 2 2011-01-26 17:29:30 PST
Comment on attachment 80269 [details] Patch ok.
Kent Tamura
Comment 3 2011-01-26 17:46:05 PST
Comment on attachment 80269 [details] Patch Clearing flags on attachment: 80269 Committed r76744: <http://trac.webkit.org/changeset/76744>
Kent Tamura
Comment 4 2011-01-26 17:46:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.