2011-01-26  Kent Tamura  <tkent@chromium.org>

Reviewed by Dimitri Glazkov.

        [Chromium] WebFrame::forms() should not return empty WebFormElements
        https://bugs.webkit.org/show_bug.cgi?id=53204

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::forms):
         - Should iterate by forms->length(), not the number of HTMLElements.
         - Do not increment the index for "temp" if a node is not an HTMLElement.

Canonical link: https://commits.webkit.org/66962@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76744 268f45cc-cd09-0410-ab3c-d52691b4dbfc